# serverless-scheduler-html-checker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-test-python.yml  flow.yml
docs/diagrams/: build-docs  high_level_overview.py
docs/diagrams/builder/: Dockerfile
serverless-scheduler-html-checker-api/: pyproject.toml
serverless-scheduler-html-checker-api/serverless_scheduler_html_checker_api/plugin_export/: __init__.py
serverless-scheduler-html-checker-api/tests/: conftest.py
serverless_scheduler_html_checker/: bucket_state.py  handler.py  html.py  ses.py
serverless_scheduler_html_checker/models/: html_monitor_job.py
serverless_scheduler_html_checker/plugin_export/: __init__.py
terraform/: bucket.tf  dev-secret-values.tfvars.example  handler.tf  iam.tf  providers.tf  secret-values.tfvars.example  subscription.tf  template.tf  terragrunt.hcl  variables.tf
tests/: conftest.py  test_bucket_state.py  test_entrypoint.py  test_handler.py  test_html.py  test_ses.py
tests/models/jobs/: html_monitor_job_test.py
