[tool.poetry]
name = "serverless-scheduler-html-checker"
version = "0.1.0"
description = "HTMLMonitorJob consumer for serverless-scheduler project. It consumes the 'html_monitor_job' events and check if the last call's obtained HTML is different than the current one."
authors = ["dezeroku <dezeroku@gmail.com>"]
readme = "README.md"
packages = [{include = "serverless_scheduler_html_checker/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.9"
# pydantic comes from common library
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.2.1"}
pylint = "^2.16.2"
# This is added as a dev dependency, because the boto3 will be obtained from the 'common' layer.
moto = "^4.1"
boto3-stubs = {extras = ["s3", "ses"], version = "^1.26.82"}
boto3 = "^1.26.152"
common = { path = "../../common/", develop = true }
serverless-scheduler-html-checker-api = { path = "./serverless-scheduler-html-checker-api", develop = true }
requests-mock = "^1.10.0"

[tool.coverage.run]
omit = ["*tests*", "*common*"]

[tool.pylint.MASTER]
py-version = "3.9"
extension-pkg-whitelist = "pydantic"
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
]

[tool.pylint.'MESSAGES CONTROL']
disable = 'missing-module-docstring,missing-class-docstring,missing-function-docstring,too-few-public-methods,fixme'

[tool.pylint.design]
max-args = 8

[tool.mypy]
plugins = "pydantic.mypy"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
